Issue with gif getting out of bounds

--- a/app/scss/_estimation.scss
+++ b/app/scss/_estimation.scss
@@ -58,5 +58,6 @@
     &__gif {
         display: block;
         margin: 0 auto 1rem auto;
+        width: 100%;
     }
 }
